# video-vault-pro

./: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
.github/workflows/: build.yml  ci.yml  deploy-web.yml
e2e/: dashboard.spec.ts  navigation.spec.ts  settings.spec.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: download_manager.rs  lib.rs
src/components/: ErrorBoundary.tsx  SplashScreen.tsx
src/components/__tests__/: QueueTable.test.tsx  UrlInput.test.tsx  common.test.tsx
src/components/dashboard/: UrlInput.tsx
src/components/layout/: AppShell.tsx
src/components/media-details/: MediaDetailsModal.tsx  PlaylistModal.tsx
src/components/queue/: QueueTable.tsx
src/hooks/: use-theme-sync.ts
src/pages/: About.tsx  Dashboard.tsx  Downloads.tsx  OpenSourceLicenses.tsx  PrivacyPolicy.tsx  Queue.tsx  Settings.tsx  TermsOfService.tsx
src/services/: ServiceProvider.tsx  diagnostics.ts  index.ts  mock.ts  tauri.ts  types.ts  utils.ts
src/services/__tests__/: diagnostics.test.ts  mock.test.ts  utils.test.ts
src/stores/: AppProvider.tsx
src/stores/__tests__/: AppProvider.test.tsx
src/types/: models.ts
